--- a/CriminalIntent/app/src/main/res/layout/fragment_crime.xml
+++ b/CriminalIntent/app/src/main/res/layout/fragment_crime.xml
@@ -39,4 +39,18 @@
         android:layout_marginRight="16dp"
         android:text="是否解决了"/>
 
+    <Button
+        android:id="@+id/crime_suspect"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:text="嫌疑人"/>
+    <Button
+        android:id="@+id/crime_report"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:text="发送消息"/>
 </LinearLayout>
